// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots should click and open popover 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--chip TextFieldWrapper--chip--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input TextFieldWrapper__input--light"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
    <div
      class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
        data-test-icon="variant"
        height="12"
        name="Variant"
        width="12"
      />
      <div
        class="css-1c8p9kb Popover Popover--light Popover--selected Popover--selected--light"
        data-test-box=""
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="css-qef3st"
          data-test-box=""
        />
      </div>
    </div>
    <div
      class="css-1jnxvbp Chip Chip--light TextFieldChip TextFieldChip--light"
      data-test-chip=""
    >
      chip
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should click on input 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input TextFieldWrapper__input--light"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render TextFieldWrapper 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input TextFieldWrapper__input--light"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render with chip 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--chip TextFieldWrapper--chip--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input TextFieldWrapper__input--light"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
    <div
      class="css-1jnxvbp Chip Chip--light TextFieldChip TextFieldChip--light"
      data-test-chip=""
    >
      chip
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextFieldWrapper snapshots should render with popover 1`] = `
<DocumentFragment>
  <div
    class="css-1jnxvbp TextFieldWrapper TextFieldWrapper--light TextFieldWrapper--filled TextFieldWrapper--filled--light"
    data-test-text-field-wrapper="text-field"
  >
    <input
      class="TextFieldWrapper__input TextFieldWrapper__input--light"
      data-test-text-field-input="text-field"
      maxlength="6"
    />
    <div
      class="css-zcp5dz TextFieldPopover TextFieldPopover--light"
      data-test-box=""
    >
      <div
        class="css-1jnxvbp TextFieldPopover__icon TextFieldPopover__icon--light TextFieldWrapper__icon TextFieldWrapper__icon--light Icon Icon--light Icon--clickable Icon--clickable--light"
        data-test-icon="variant"
        height="12"
        name="Variant"
        width="12"
      />
      <div
        class="css-1c8p9kb Popover Popover--light"
        data-test-box=""
        data-test-popover="popover"
        style="left: 0px; top: 0px;"
      >
        <div
          class="css-qef3st"
          data-test-box=""
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
